--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
             <h4>Daniele Fernandes e Silva</h4>
             <p>Professora</p>
             
-            <h4>Jiani Cardoso da Roza</h4>
+            <h4>Fábio Diniz Rossi</h4>
+            <p>Professor</p>
+            
+            <h4>Renata Porto Alegre Garcia</h4>
             <p>Professora</p>
-
 
 
         </div>
@@ -115,7 +117,7 @@
             <h4>Douglas Dalla Nora</h4>
             <p>Professor</p>
 
-            <h4>Renata Porto Alegre Garcia</h4>
+            <h4>Jiani Cardoso da Roza</h4>
             <p>Professora</p>
 
         </div>
